<resources>
	<string name="app_name">Hackaton 2020</string>
	<string name="login_headtitel">Wie möchtest Du benachrichtigt werden?</string>
	<string name="login_messageOption_letter">Benachrichtigung per Brief</string>
	<string name="login_messageOption_mail">Benachrichtigung per E-Mail</string>
	<string name="login_messageOption_push">Per Push-Benachrichtigung</string>
	<string name="login_messageOption_app">In der App</string>
	<string name="login_continue">Weiter</string>
	<string name="main_CodeResult">Kein QR-Code gefunden</string>
	<string name="checkPerson_whoIsGuest">Wer ist Gast?</string>
	<string name="checkPerson_whoIsGuest_me">Ich</string>
	<string name="checkPerson_addPersonButton">Person hinzufügen</string>
	<string name="checkPerson_finishButton">Fertig</string>
	<string name="addPerson_headline">Eine Person hinzufügen</string>
	<string name="cancel">Abbrechen</string>
	<string name="addPerson_continue">Hinzufügen</string>
	<string name="forename">Vorname</string>
	<string name="lastname">Nachname</string>
	<string name="street_number">Straße + Hausnr.</string>
	<string name="postcode">PLZ</string>
	<string name="city">Ort</string>
	<string name="mail">E-Mail</string>
	<string name="showReady_headline">Bestätigung</string>
	<string name="showReady_subheading">Bitte der Bedienung zeigen!</string>
	<string name="showReady_description"><![CDATA[Diese Bestätigung kann später über Menü -> Dieses Lokal aufgerufen werden.]]></string>
	<string name="showReady_personCount">5</string>
	<string name="showReady_personCountDescription">... Personen registriert.</string>
	<string name="back">Zurück</string>
	<string name="main_codeResult">Kein QR-Code gefunden</string>
	<string name="main_IconDescription">Menu Icon</string>
	<string name="home_screen_camerabutton">QRCode-Scanner</string>
	<string name="home_screen_appname">Hackathon</string>
	<string name="home_screen_open">Öffnen</string>
	<string name="home_screen_close">Schließen</string>
	<string name="showLoggedOut_headline">Erfolgreich abgemeldet</string>
	<string name="showLoggedOut_description_1">Du hast dieses Restaurant/diese Veranstaltung</string>
	<string name="showLoggedOut_description_2">lang besucht. Vielen Dank, dass du unsere App nutzt!</string>
	<string name="notification_title">Sind Sie noch da?</string>
	<string name="notification_text">Sie sind noch angemeldet. Wenn Sie das Event verlassen, melden Sie sich bitte ab.</string>
	<string name="notification_action">ABMELDEN</string>
	<string name="restaurant_info_Besuch_Anfang">Anfang Besuchszeit:</string>
	<string name="restaurant_info_Besuch_Ende">Ende Besuchszeit:</string>
	<string name="restaurant_info_Mitnahme_Personen">Mitgenommene Personen:</string>
	<string name="register_infection_title">Corona-Positiv?</string>
	<string name="register_infection_input">Bestätigungscode</string>
	<string name="register_infection_button">Absenden</string>
	<string name="register_infection_text_part1">Kontaktiere Deine lokale Gesundheitsbehörde unter folgender Nummer:</string>
	<string name="register_infection_text_part2">und erhalte einen Bestätigungscode.</string>
	<string name="generate_qr_code_title">QR-Code registrieren</string>
	<string name="generate_qr_code_attr1">Veranstaltungsname</string>
	<string name="generate_qr_code_attr2">Straße + Hausnr.</string>
	<string name="generate_qr_code_attr3">PLZ</string>
	<string name="generate_qr_code_attr4">Ort</string>
	<string name="generate_qr_code_button">QR-Code generieren</string>
	<string name="generate_qr_code_spinner">Veranstaltungsart</string>
	<string name="generate_qr_code_attr5">Details</string>
</resources>