<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/apply"
	tools:context=".ShowReady">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:text="@string/showReady_headline"
		android:textAppearance="@style/TextAppearance.AppCompat.Display3"
		android:textColor="@color/white"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:gravity="center"
		android:text="@string/showReady_subheading"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="100dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:gravity="center"
		android:text="@string/showReady_description"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		android:textColor="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

	<TextView
		android:id="@+id/showReady_countUsers"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:text="@string/showReady_personCount"
		android:textAppearance="@style/TextAppearance.AppCompat.Display4"
		android:textColor="@color/white"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4" />

	<TextView
		android:id="@+id/textView9"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/showReady_personCountDescription"
		android:textColor="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/showReady_countUsers" />

	<Button
		android:id="@+id/showReady_backBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="32dp"
		android:layout_marginRight="32dp"
		android:layout_marginBottom="32dp"
		android:text="@string/back"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>